--- a/build.xml
+++ b/build.xml
@@ -1682,7 +1682,7 @@ BENCHMARKS
     description="Call the standard benchmark target configured to use one node of the test cluster.">
     <antcall target="benchmark" inheritAll='true'>
         <param name="hostcount" value="1"/>
-        <param name="host1" value="localhost"/>
+        <param name="host1" value="copley.csail.mit.edu"/>
         <param name="sitesperhost" value="2"/>
         <param name="clientcount" value="1"/>
         <param name="clienthost1" value="localhost"/>
